--- a/index.html
+++ b/index.html
@@ -7,24 +7,29 @@
     <meta name="author" content="The Vineyard Church of Central Illinois">
     <meta name="description" content="Vineyard Youth Conference">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="node_modules/tachyons/css/tachyons.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
     <link rel="stylesheet" href="assets/style.css">
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
   </head>
   <body>
 
     <div class="container">
 
-      <div id="header"></div>
+      <img src="assets/reverb_logo.png">
+      <nav class="bt bb b--white tc mw7 center mt4">
+        <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="index.html">About</a>
+        <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="schedule.html">Schedule</a>
+        <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="packinglist.html">What To Bring</a>
+        <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="register.html">Register</a>
+      </nav>
 
       <p class="tc fl w-100 pa2 white">
-      <span class="bold">Date:</span> Feb 24-26 |
-      <span class="bold">Cost:</span> $135 (before Feb 5th) |
-      <span class="bold">Where:</span> Carlinville, IL
+      <span class="b">Date:</span> Feb 24-26 |
+      <span class="b">Cost:</span> $135 (before Feb 5th) |
+      <span class="b">Where:</span> Carlinville, IL
       </p>
 
       <div class="tc">
-        <button class="register-btn"><a class="register" href="https://thevineyardchurch.ccbchurch.com/login.php" target="_blank">Register</a></button>
+        <button class="tc f3"><a class="no-underline black" href="https://thevineyardchurch.ccbchurch.com/login.php" target="_blank">Register</a></button>
       </div>
 
       <h1 class="white tc">Keynote Speaker</h1>
@@ -62,14 +67,14 @@
       <p class="white tc">For more information, contact Leah Wenger at <a class="white" href="mailto:leah.wenger@thevineyardchurch.us">leah.wenger@thevineyardchurch.us</a></p>
 
 
-      <div id="footer"></div>
-
-      <script>
-        $(document).ready(function(){
-          $('#header').load('header.html');
-          $('#footer').load('footer.html');
-        });
-      </script>
+      <br />
+      <footer class="bt b--white">
+        <br />
+        <div class="vineyard_logo">
+          <a class="footer" href="http://thevineyardchurch.us" target="_blank"><img src="assets/vineyard_logo.png"></a>
+        </div>
+      </footer>
+      <br />
 
     </div>
 
