added svg for pinned tabs on safari

--- a/schedule.html
+++ b/schedule.html
@@ -24,6 +24,8 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/assets/cms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <!-- safari pinned tab -->
+    <link rel="mask-icon" href="assets/rvb_pinned.svg" color="black">
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
     <link rel="stylesheet" href="assets/style.css">
