--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
     <meta name="msapplication-TileImage" content="/assets/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- safari pinned tab -->
-    <link rel="mask-icon" href="assets/rvb_pinned.svg" color="black">
+    <link rel="mask-icon" href="assets/rvb_pinned.svg" color="white">
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
     <link rel="stylesheet" href="assets/style.css">
