added description & fixed typo on schedule

--- a/index.html
+++ b/index.html
@@ -42,10 +42,19 @@
         <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="register.html">Register</a>
       </nav>
 
+
       <p class="tc fl w-100 pa2 white">
-      <span class="b">Date:</span> Feb 24-26 |
-      <span class="b">Cost:</span> $139 (before Feb 5th) |
-      <span class="b">Where:</span> Carlinville, IL
+        <span class="b">Date:</span> Feb 24-26 |
+        <span class="b">Cost:</span> $139 (before Feb 5th) |
+        <span class="b">Where:</span> Carlinville, IL
+      </p>
+
+      <p class="pa2 white">
+        Reverb is the annual Regional Vineyard Conference for students 6th-12th grade.
+        The purpose of this conference is to gather Vineyard Youth Ministries from all
+        around the Midwest (and beyond) to extend the Kingdom, to bring life to our
+        youth ministries, and to experience the power and presence of God. We welcome
+        groups of all sizes to join us for this fun, action-packed weekend!
       </p>
 
       <div class="tc">
