link to lake williamson retreat center

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="msapplication-TileImage" content="/assets/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- safari pinned tab -->
-    <link rel="mask-icon" href="assets/rvb_pinned.svg" color="#1C2C40">
+    <!-- <link rel="mask-icon" href="assets/rvb_pinned.svg" color="#1C2C40"> -->
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
     <link rel="stylesheet" href="assets/style.css">
@@ -46,7 +46,7 @@
       <p class="tc fl w-100 pa2 white">
         <span class="b">Date:</span> Feb 24-26 |
         <span class="b">Cost:</span> $139 (before Feb 5th) |
-        <span class="b">Where:</span> Carlinville, IL
+        <span class="b">Where:</span> <a href="http://www.lakewilliamson.org" target="_blank" class="white">Lake Williamson Retreat Center</a>
       </p>
 
       <p class="pa2 white">
