make navbar bold

--- a/schedule.html
+++ b/schedule.html
@@ -25,7 +25,7 @@
     <meta name="msapplication-TileImage" content="/assets/cms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- safari pinned tab -->
-    <link rel="mask-icon" href="assets/rvb_pinned.svg" color="#1C2C40">
+    <!-- <link rel="mask-icon" href="assets/rvb_pinned.svg" color="#1C2C40"> -->
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
     <link rel="stylesheet" href="assets/style.css">
@@ -35,10 +35,10 @@
     <div class="container">
       <img src="assets/reverb_logo.png">
       <nav class="bt bb b--white tc mw7 center mt4">
-        <a class="f6 f5-l link bg-animate white-80 dim dib pa3 ph4-l" href="index.html">About</a>
-        <a class="f6 f5-l link bg-animate white-80 dim dib pa3 ph4-l" href="schedule.html">Schedule</a>
-        <a class="f6 f5-l link bg-animate white-80 dim dib pa3 ph4-l" href="packinglist.html">What To Bring</a>
-        <a class="f6 f5-l link bg-animate white-80 dim dib pa3 ph4-l" href="register.html">Register</a>
+        <a class="f6 f5-l link b bg-animate white-80 dim dib pa3 ph4-l" href="index.html">About</a>
+        <a class="f6 f5-l link b bg-animate white-80 dim dib pa3 ph4-l" href="schedule.html">Schedule</a>
+        <a class="f6 f5-l link b bg-animate white-80 dim dib pa3 ph4-l" href="packinglist.html">What To Bring</a>
+        <a class="f6 f5-l link b bg-animate white-80 dim dib pa3 ph4-l" href="register.html">Register</a>
       </nav>
 
       <div class="tc">
