--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>Reverb Conference</title>
     <meta name="author" content="The Vineyard Church of Central Illinois">
-    <meta name="description" content="Vineyard Midwest Youth Conference">
+    <meta name="description" content="Reverb is the annual Regional Vineyard Conference for students 6th-12th grade.
+    The purpose of this conference is to gather Vineyard Youth Ministries from all
+    around the Midwest (and beyond) to extend the Kingdom, to bring life to our
+    youth ministries, and to experience the power and presence of God.">
+    <meta name="keyword" content="reverb conference, youth retreat, vineyard church youth,
+                                  midwest vineyard, vineyard midwest youth, leah wenger, kyle howard,
+                                  vineyard midwest worship, vineyard worship, reverb, reverb youth conference,
+                                  youth conference">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicons/apple-icon-57x57.png">
@@ -32,69 +40,24 @@
   </head>
   <body>
 
-    <div class="container">
+    <div class="auto mw7">
 
       <img src="assets/reverb_logo.png">
-      <nav class="bt bb b--white tc mw7 center mt4">
-        <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="index.html">About</a>
-        <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="schedule.html">Schedule</a>
-        <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="packinglist.html">What To Bring</a>
-        <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="register.html">Register</a>
-      </nav>
+
+      <h1 class="white tc">Reverb 2018 Details Coming Soon</h1>
 
 
-      <p class="tc fl w-100 pa2 white">
-        <span class="b">Date:</span> Feb 24-26 |
-        <span class="b">Cost:</span> $139 (before Feb 5th) |
-        <span class="b">Where:</span> <a href="http://www.lakewilliamson.org" target="_blank" class="white">Lake Williamson Retreat Center</a>
-      </p>
+      <!-- <br />
 
-      <p class="pa2 white">
-        Reverb is the annual Regional Vineyard Conference for students 6th-12th grade.
-        The purpose of this conference is to gather Vineyard Youth Ministries from all
-        around the Midwest (and beyond) to extend the Kingdom, to bring life to our
-        youth ministries, and to experience the power and presence of God. We welcome
-        groups of all sizes to join us for this fun, action-packed weekend!
-      </p>
+      <video controls>
+        <source src="assets/promo.mp4" type="video/mp4">
+      </video> -->
 
-      <div class="tc">
-        <button class="tc f3"><a class="no-underline black" href="https://thevineyardchurch.ccbchurch.com/form_response.php?id=483" target="_blank">Register</a></button>
-      </div>
 
-      <h1 class="white tc">Keynote Speaker</h1>
-      <div>
-        <div class="pics fl w-30 pa2">
-          <img class="" src="assets/Jenna.Stepp.jpg">
-        </div>
-        <div class="white fl w-70 pa2 lh-title">
-          <h3 class="white bold">Jenna Stepp</h3>
-          Jenna currently serves on the Vineyard USA’s national youth task force and is passionate
-          about seeing young people empowered with the supernatural reality of the
-          Christian life! Jenna serves as the Director of Development for Vineyard's
-          Heroic Leadership Institute.
-        </div>
-      </div>
-      <div class="cf"></div>
-      <h1 class="tc white">Worship Leader</h1>
-      <div>
-        <div class="white tr fl w-70 pa2 lh-title">
-          <h3 class="white bold">Kyle Howard</h3>
-        Kyle is a loved son of God and a talented song writer and
-        worship leader. He has been leading worship at the Vineyard since
-        he was 14 years old and now serves as the Worship Director at the
-        Mahomet Vineyard. In addition to worshipping Jesus, Kyle loves
-        playing basketball, eating spicy chicken sandwiches from Chick-fil-A,
-        and spending time with friends and family
-        </div>
-        <div class="jenna fl w-30 pa2">
-          <img class="pics" src="assets/Kyle.Howard.jpg">
-        </div>
-      </div>
       <div class="cf"></div>
 
       <br /><br />
       <p class="white tc">For more information, contact Leah Wenger at <a class="white" href="mailto:leah.wenger@thevineyardchurch.us">leah.wenger@thevineyardchurch.us</a></p>
-
 
       <br />
       <footer class="bt b--white">
