--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <p class="pa2 white">
         Reverb is the annual Regional Vineyard Conference for students 6th-12th grade.
         The purpose of this conference is to gather Vineyard Youth Ministries from all
-        around the Midwest (and beyond) to extend the Kingdom, to bring life to our
-        youth ministries, and to experience the power and presence of God. We welcome
+        around the Midwest (and beyond) to extend the Kingdom, to bring life to our students,
+        and to experience the power and presence of God. We welcome
         groups of all sizes to join us for this fun, action-packed weekend!
       </p>
 
