--- a/register.html
+++ b/register.html
@@ -44,7 +44,7 @@
       <h1 class="white tc">Registration Information</h1>
       <div class="white pa2">
         1) The base cost of registration is $140. After February 5th,
-        the price will raise to $155. The cost includes food, lodging,
+        the price will raise to $160. The cost includes food, lodging,
         and most activities. Some churches may charge additional money
         for travel. Speak to your church's leader for more information.
       </div> <br />
@@ -59,7 +59,7 @@
         of the form (not the parent/guardian name).
       </div> <br />
       <div class="white pa2">
-        4) Sweatshirts are included in the cost of the conference.
+        4) T-Shirts are included in the cost of the conference.
         Additional sizes may not be available if you register late.
       </div> <br />
       <div class="white pa2">
