updated kyles bio

--- a/index.html
+++ b/index.html
@@ -81,12 +81,14 @@
       <div>
         <div class="white tr fl w-70 pa2 lh-title">
           <h3 class="white bold">Kyle Howard</h3>
-        Kyle is a loved son of God and a talented song writer and
-        worship leader. He has been leading worship at the Vineyard since
-        he was 14 years old and now serves as the Worship Director at the
-        Mahomet Vineyard. In addition to worshipping Jesus, Kyle loves
-        playing basketball, eating spicy chicken sandwiches from Chick-fil-A,
-        and spending time with friends and family
+        Kyle's deepest passions are to see people encounter the loving presence
+        of the Father and for people to walk in the fullness of who they were
+        made to be as sons and daughters of the living God. Kyle began leading
+        worship over 10 years ago in his youth ministry at the age of 14. He is
+        featured on worship albums for the National Vineyard and VWorship.
+        Kyle now serves on staff at The Vineyard Church of Central Illinois
+        as Worship Pastor. When he isn't leading worship, Kyle loves to play
+        basketball, golf, and hangout with friends. 
         </div>
         <div class="jenna fl w-30 pa2">
           <img class="pics" src="assets/Kyle.Howard.jpg">
