updated kyles picture

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         featured on worship albums for the National Vineyard and VWorship.
         Kyle now serves on staff at The Vineyard Church of Central Illinois
         as Worship Pastor. When he isn't leading worship, Kyle loves to play
-        basketball, golf, and hangout with friends. 
+        basketball, golf, and hangout with friends.
         </div>
-        <div class="jenna fl w-30 pa2">
+        <div class="fl w-30 pa2 mt5">
           <img class="pics" src="assets/Kyle.Howard.jpg">
         </div>
       </div>
