--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Reverb Conference</title>
     <meta name="author" content="The Vineyard Church of Central Illinois">
     <meta name="description" content="Vineyard Midwest Youth Conference">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Vineyard Youth Conference, Youth Conference, Vineyard Midwest, Midwest Youth">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicons/apple-icon-60x60.png">
@@ -27,15 +28,22 @@
     <!-- safari pinned tab -->
     <!-- <link rel="mask-icon" href="assets/rvb_pinned.svg" color="#1C2C40"> -->
     <!-- CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
+    <!-- Bootstrap CSS -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+          integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/style.css">
   </head>
   <body>
 
     <div class="container">
 
-      <img src="assets/reverb_logo.png">
-      <nav class="bt bb b--white tc mw7 center mt4">
+      <div class="cover">
+        <h1>Reverb</h1>
+      </div>
+
+      <!-- <img src="assets/reverb_logo.png">
+      <nav class="bt bb bwhite tc mw7 center mt4">
         <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="index.html">About</a>
         <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="schedule.html">Schedule</a>
         <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="packinglist.html">What To Bring</a>
@@ -91,7 +99,7 @@
         basketball, golf, and hangout with friends.
         </div>
         <div class="fl w-30 pa2 mt5">
-          <img class="pics" src="assets/Kyle.Howard.jpg">
+          <img class="pics" src="assets/kyle.jpg">
         </div>
       </div>
       <div class="cf"></div>
@@ -101,15 +109,20 @@
 
 
       <br />
-      <footer class="bt b--white">
+      <footer class="bt bwhite">
         <br />
         <div class="vineyard_logo">
           <a class="footer" href="http://thevineyardchurch.us" target="_blank"><img src="assets/vineyard_logo.png"></a>
         </div>
       </footer>
-      <br />
+      <br /> -->
 
     </div>
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script> -->
 
   </body>
 </html>
