--- a/packinglist.html
+++ b/packinglist.html
@@ -6,6 +6,7 @@
     <title>Reverb Conference</title>
     <meta name="author" content="The Vineyard Church of Central Illinois">
     <meta name="description" content="Vineyard Youth Conference">
+    <meta name="keywords" content="Vineyard Youth Conference, Youth Conference, Vineyard Midwest, Midwest Youth">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicons/apple-icon-57x57.png">
