added header, nav, and about

--- a/index.html
+++ b/index.html
@@ -36,20 +36,53 @@
   </head>
   <body>
 
+    <header>
+      <img id="logo" src="./assets/reverb_logo.png">
+      <!-- <h1>Reverb</h1> -->
+      <nav>
+        <span><a href="#mission">About</a></span>
+        <span><a href="#featured-tea">Featured Guests</a></span>
+        <span><a href="#featured-tea">Schedule</a></span>
+        <span><a href="#locations">Packing List</a></span>
+        <span><a href="#locations">Register</a></span>
+      </nav>
+    </header>
+
+    <div class="cover">
+      <h1>Experience the Power and Presence of God</h1>
+      <a href="#">Register</a>
+    </div>
+
     <div class="container">
 
-      <div class="cover">
-        <h1>Reverb</h1>
+      <div class="about">
+        <h2>What is Reverb?</h2>
+        <p class="">
+          Reverb is the annual Regional Vineyard Conference for students 6th-12th grade.
+          The purpose of this conference is to gather Vineyard Youth Ministries from all
+          around the Midwest (and beyond) to extend the Kingdom, to bring life to our students,
+          and to experience the power and presence of God. We welcome
+          groups of all sizes to join us for this fun, action-packed weekend!
+        </p>
+
+        <h2>When is Reverb?</h2>
+        <p class="times">
+          <span class="b">Date:</span> Feb 23-25 |
+          <span class="b">Cost:</span> $140 (before Feb 5th) |
+          <span class="b">Where:</span> <a href="http://www.lakewilliamson.org" target="_blank" class="white">Lake Williamson Retreat Center</a>
+        </p>
       </div>
 
-      <!-- <img src="assets/reverb_logo.png">
-      <nav class="bt bb bwhite tc mw7 center mt4">
-        <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="index.html">About</a>
-        <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="schedule.html">Schedule</a>
-        <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="packinglist.html">What To Bring</a>
-        <a class="f6 f5-l b link bg-animate white-80 dim dib pa3 ph4-l" href="register.html">Register</a>
-      </nav>
+      <div class="guests">
+        <h1>Featured Guests</h1>
 
+
+
+
+      </div>
+
+
+      <!--
 
       <p class="tc fl w-100 pa2 white">
         <span class="b">Date:</span> Feb 23-25 |
