added schedule info

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <nav>
         <span><a href="#about">About</a></span>
         <span><a href="#guests">Featured Guests</a></span>
-        <span><a href="#featured-tea">Schedule</a></span>
         <span><a href="#locations">Packing List</a></span>
-        <span><a href="#locations">Register</a></span>
+        <span><a href="#schedule">Schedule</a></span>
+        <span><a href="#register">Register</a></span>
       </nav>
     </header>
 
@@ -154,6 +154,78 @@
           </div>
         </div>
 
+      </div>
+
+
+      <div id="schedule" class="schedule-container">
+        <div class="schedule">
+          <h1>Schedule</h1>
+
+          <div class="grid">
+            <div class="grid__col grid__col--1-of-3">
+              <h2 class="">Friday</h2>
+              <ul class="no-list-type">
+                <li><span class="time">5-7pm</span> Registration</li>
+                <li><span class="time">5-7pm</span> Free Time</li>
+                <li><span class="time">6pm</span> Dinner</li>
+                <li><span class="time">7pm</span> Session 1</li>
+                <li><span class="time">10:30pm</span> Free Time</li>
+                <li><span class="time">12:30am</span> Lights Out</li>
+              </ul>
+            </div>
+            <div class="grid__col grid__col--1-of-3">
+              <h2 class="">Saturday</h2>
+              <ul class="no-list-type">
+                <li><span class="time">8:45am</span> Breakfast</li>
+                <li><span class="time">9:30am</span> Session 2</li>
+                <li><span class="time">10am</span> Workshop 1</li>
+                <li><span class="time">11am</span> Workshop 2</li>
+                <li><span class="time">12pm</span> Lunch</li>
+                <li><span class="time">1pm</span> Free Time</li>
+                <li><span class="time">5:30pm</span> Dinner</li>
+                <li><span class="time">7pm</span> Session 3</li>
+                <li><span class="time">10pm</span> Free Time</li>
+                <li><span class="time">12:30am</span> Lights Out</li>
+              </ul>
+            </div>
+            <div class="grid__col grid__col--1-of-3">
+              <h2 class="">Sunday</h2>
+              <ul class="no-list-type">
+                <li><span class="time">8:45am</span> Breakfast</li>
+                <li><span class="time">9:30am</span> Session 4</li>
+                <li><span class="time">12pm</span> Lunch</li>
+                <li><span class="time">1pm</span> Leave Camp</li>
+              </ul>
+            </div>
+          </div>
+
+          <h1 class="white underline">Free Time Activities</h1>
+            <p class="">
+              Lake Williamson offers a variety of activites
+              that will be available during free time
+            </p>
+          <div class="grid">
+            <div class="grid__col grid__col--1-of-3">
+              <h2 class="">Friday</h2>
+              <ul class="no-list-type">
+                <li>5-7pm Rec Center</li>
+                <li>10:30-12am Rec Center/Café</li>
+              </ul>
+            </div>
+            <div class="grid__col grid__col--1-of-3">
+              <h2 class="">Saturday</h2>
+              <ul class="no-list-type">
+                <li>12:30-4pm Rec Center</li>
+                <li>1-4pm Climbing Wall</li>
+                <li>1-4pm Pool/Hot Tub</li>
+                <li>1pm High School Dodgeball</li>
+                <li>2:30pm Junior High Dodgeball</li>
+                <li>10pm-12am Rec Center/Café</li>
+              </ul>
+            </div>
+          </div>
+
+        </div>
       </div>
 
 
