--- a/index.html
+++ b/index.html
@@ -36,13 +36,20 @@
 
     <header>
       <img id="logo" src="./assets/reverb_logo.png">
-      <nav>
+      <nav id="desktop">
         <span><a href="#about">About</a></span>
         <span><a href="#guests">Featured Guests</a></span>
         <span><a href="#locations">Packing List</a></span>
         <span><a href="#schedule">Schedule</a></span>
         <span><a href="#register">Register</a></span>
       </nav>
+
+      <div id="mobile">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+
     </header>
 
     <div class="cover">
@@ -200,7 +207,7 @@
           </div>
 
           <h1 class="white underline">Free Time Activities</h1>
-            <p class="">
+            <p>
               Lake Williamson offers a variety of activites
               that will be available during free time
             </p>
@@ -226,6 +233,42 @@
           </div>
 
         </div>
+      </div>
+
+
+      <div id="register" class="register-container">
+        <div class="register">
+          <h1>Registration Information</h1>
+
+          <p>
+            1) The base cost of registration is $140. After February 5th,
+            the price will raise to $160. The cost includes food, lodging,
+            and most activities. Some churches may charge additional money
+            for travel. Speak to your church's leader for more information.
+          </p> <br />
+          <p>
+            2) You may pay later by choosing "pay later" under
+            payment option. Some churches may elect to have their
+            students pay later and submit a payment directly to their
+            church. Speak to your church's leader for more inforomation.
+          </p> <br />
+          <p>
+            3) Please be sure to put the STUDENT'S NAME at the beginning
+            of the form (not the parent/guardian name).
+          </p> <br />
+          <p>
+            4) T-Shirts are included in the cost of the conference.
+            Additional sizes may not be available if you register late.
+          </p> <br />
+          <p>
+            5) Feel free to send your student with spending money.
+            We have a cafe with snacks and merchandise available for sale.
+          </p>
+
+          <!-- <a href="#">Register</a> -->
+
+        </div>
+
       </div>
 
 
