fixed padding for selecting things on nav

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <nav id="desktop">
         <span><a href="#about">About</a></span>
         <span><a href="#guests">Featured Guests</a></span>
-        <span><a href="#locations">Packing List</a></span>
+        <span><a href="#packing">Packing List</a></span>
         <span><a href="#schedule">Schedule</a></span>
         <span><a href="#register">Register</a></span>
       </nav>
@@ -47,29 +47,33 @@
     </header>
 
     <div class="cover">
-      <h1>Reverb 2017</h1>
-      <h1>Experience the Power and Presence of God</h1>
-      <a href="#">Register</a>
+      <!-- <div class="cover-flex"> -->
+        <h1>Reverb 2017</h1>
+        <h1>Experience the Power and Presence of God</h1>
+        <a href="#">Register</a>
+      <!-- </div> -->
     </div>
 
-    <div class="container">
+    <!-- <div class="container"> -->
 
-      <div id="about" class="about">
-        <h2>What is Reverb?</h2>
-        <p class="">
-          Reverb is the annual Regional Vineyard Conference for students 6th-12th grade.
-          The purpose of this conference is to gather Vineyard Youth Ministries from all
-          around the Midwest (and beyond) to extend the Kingdom, to bring life to our students,
-          and to experience the power and presence of God. We welcome
-          groups of all sizes to join us for this fun, action-packed weekend!
-        </p>
+      <div id="about" class="container">
+        <div class="about">
+          <h2>What is Reverb?</h2>
+          <p class="">
+            Reverb is the annual Regional Vineyard Conference for students 6th-12th grade.
+            The purpose of this conference is to gather Vineyard Youth Ministries from all
+            around the Midwest (and beyond) to extend the Kingdom, to bring life to our students,
+            and to experience the power and presence of God. We welcome
+            groups of all sizes to join us for this fun, action-packed weekend!
+          </p>
 
-        <h2 class="pt-25">When is Reverb?</h2>
-        <p class="times">
-          <span class="b">Date:</span> Feb 23-25 |
-          <span class="b">Cost:</span> $140 (before Feb 5th) |
-          <span class="b">Where:</span> <a href="http://www.lakewilliamson.org" target="_blank" class="white">Lake Williamson Retreat Center</a>
-        </p>
+          <h2 class="pt-25">When is Reverb?</h2>
+          <p class="times">
+            <span class="b">Date:</span> Feb 23-25 |
+            <span class="b">Cost:</span> $140 (before Feb 5th) |
+            <span class="b">Where:</span> <a href="http://www.lakewilliamson.org" target="_blank" class="white">Lake Williamson Retreat Center</a>
+          </p>
+        </div>
       </div>
 
       <div id="guests" class="guests-container">
@@ -120,7 +124,7 @@
       </div>
 
 
-      <div id="packing" class="packing-container">
+      <div id="packing" class="container">
         <div class="packing">
           <h1>Packing List</h1>
 
@@ -230,7 +234,7 @@
       </div>
 
 
-      <div id="register" class="register-container">
+      <div id="register" class="container">
         <div class="register">
           <h1>Registration Information</h1>
 
@@ -389,7 +393,7 @@
       </footer>
       <br /> -->
 
-    </div>
+    <!-- </div> -->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
